# sap-sam

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  README.md  autosetup.sh  citation.cff  environment-lock.yml  environment.yml  index.js  package.json  pyproject.toml  requirements.txt  setup.py
.reuse/: dep5
lib/: translateGettext.js
notebooks/: 1_tutorial.ipynb  2_properties.ipynb  3_images_and_XMLs.ipynb  4_conventions.ipynb
spec/: index.spec.js  messages.po  messages_translated.po
src/sapsam/: DataAnonymizer.py  Generator.py  ImageGenerator.py  RepresentationGenerator.py  SGXConverter.py  SignavioAPITool.py  SignavioAuthenticator.py  SignavioBestPracticesChecker.py  SignavioConventionsChecker.py  constants.py  detector.py  filters.py  mappings.json  measures.py  parser.py  prefilled_example_processes.json
